# approver

./: .gitignore  PROMPTS.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
credit_approver/: __init__.py  app.py  dsr.py  kyc.py  ltv.py  models.py  remote_scraper_client.py  scoring.py  scraper_server.py  valuation.py
scripts/: inspect_sgcarmart.py
tests/: test_dsr.py  test_ltv.py  test_remote_scraper_client.py  test_scoring.py  test_valuation.py
