[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-approver"
version = "0.1.0"
description = "Credit-scoring agent for hire-purchase vehicle loans"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
packages = ["credit_approver"]
